--- a/Google/style google.css
+++ b/Google/style google.css
@@ -1,6 +1,12 @@
-.border-flex {
-    border: 2px solid red;
+html {
+    height: 100%;
   }
+
+body {
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
 #conteneur1{
     display: flex;
@@ -8,6 +14,8 @@
     justify-content: flex-end;
     align-items: center;
     height: 30px;
+    margin-right: 10px;
+    padding-top: 10px;
 }
 
 .items{
@@ -28,7 +36,7 @@ a.items:hover{
     width: 1.3%;
     height: 1.3%;
     margin-right: 15px;
-    padding-bottom: 12px;
+    padding-bottom: 15px;
 }
 
 .appgoogle{
@@ -49,6 +57,7 @@ a.items:hover{
     cursor: default;
     border-radius: 2px;
 }
+
 
 .logo{
     display: flex;
@@ -162,24 +171,59 @@ input:focus {
 .virus:hover{
     text-decoration: underline;
     cursor: pointer;
+    color: #1a0dab;
 }
 
 .virus:visited{
     color: #609;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
 }
 
 footer{
     background:#F2F2F2;
     position:absolute;
-    bottom:0;
-    width:100%;
-    padding-top:50px;
-    height:80px;
+    bottom: 0;
+    width: 100%;
+    margin-top: 15px;
+    right: 0;
+    left: 0;
+}
+
+.France{
+    border-bottom: 1px solid #e4e4e4;
+}
+
+.pays{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #5F6368;
+    text-decoration: none;
+    margin-left: 30px;
 }
 
 .aide{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.aide1{
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.aide2{
+    display: flex;
+    flex-direction: row;
+    max-width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .touche{
@@ -187,17 +231,18 @@ footer{
     font-size: 14px;
     color: #5F6368;
     text-decoration: none;
-    margin-right: 10px;
+    margin-right: 27px;
 }
 
-.touche:hover{
+a.touche:hover{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #5F6368;
     text-decoration: underline;
+    cursor: pointer;
 }
 
-.touche:visited{
+a.touche:visited{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #5F6368;
